# aavegotchi-substreams

./: Cargo.toml  README.md  build.rs  substreams.yaml
abi/: core-diamond.json  installation-diamond.json  realm-diamond.json  tile-diamond.json
proto/: aavegotchi-core-diamond.proto
src/: lib.rs
src/abi/: core-diamond.rs  core_diamond.rs  installation-diamond.rs  installation_diamond.rs  mod.rs  realm-diamond.rs  realm_diamond.rs  tile_diamond.rs
src/pb/: eth.aavegotchi.v1.rs  mod.rs
