[package]
name = "substreams-template"
version = "0.1.0"
description = "Substream template demo project"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-template"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
wasm-bindgen = "0.2.79"
prost = "0.11.0"
prost-types = "0.11.0"
hex = "0.4.3"
substreams = "^0.5.0"
substreams-ethereum = "0.8.0"
substreams-entity-change = "0.3.0"
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"
base64 = "0.13.0"
stable-hash_legacy = { version = "0.3.3", package = "stable-hash" }
stable-hash = { version = "0.4.2"}
thiserror = "1.0.25"
num-traits = "0.2.15"


# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
prost-build = "0.11.0"
anyhow = "1"
substreams-ethereum = "0.8.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"